src/main/java/com/example/demo/error/InvalidPasswordUpdateException.java
package com.example.demo.error;

public class InvalidPasswordUpdateException extends Exception {
}
